# auth0-fullstack

./: README.md
backend/: .env.sample  Cargo.toml
backend/src/: main.rs
frontend/: .env.sample  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
